DROP TABLE "APP_CUSTOMER";

CREATE TABLE "APP_CUSTOMER" (
    "CUSTOMER_ID"  INTEGER,
    "NAME"         VARCHAR2(200),
    "EMAIL"        VARCHAR2(100),
    "CREATED_AT"   DATE,
    "STATUS"       VARCHAR2(2)
) 
TABLESPACE "APP_DATA";

CREATE UNIQUE INDEX "APP_CUSTOMER_P1" ON
    "APP_CUSTOMER" (
        "CUSTOMER_ID"
    )
        TABLESPACE "APP_INDEX";

ALTER TABLE "APP_CUSTOMER"
    ADD CONSTRAINT "APP_CUSTOMER_P1" PRIMARY KEY (
        "CUSTOMER_ID"
    )
    USING INDEX "APP_CUSTOMER_P1"
    ENABLE;

COMMENT ON TABLE "APP_CUSTOMER" IS 'Customer master data';

COMMENT ON COLUMN "APP_CUSTOMER"."CUSTOMER_ID" IS 'Sequential customer identifier';
COMMENT ON COLUMN "APP_CUSTOMER"."NAME" IS 'Customer name';
COMMENT ON COLUMN "APP_CUSTOMER"."EMAIL" IS 'Contact email address';
COMMENT ON COLUMN "APP_CUSTOMER"."CREATED_AT" IS 'Creation date';
COMMENT ON COLUMN "APP_CUSTOMER"."STATUS" IS 'Status code';

GRANT DELETE ON "APP_CUSTOMER" TO "APP_USER";
GRANT INSERT ON "APP_CUSTOMER" TO "APP_USER";
GRANT SELECT ON "APP_CUSTOMER" TO "APP_USER";
GRANT UPDATE ON "APP_CUSTOMER" TO "APP_USER";
GRANT DELETE ON "APP_CUSTOMER" TO "APP_BATCH";
GRANT INSERT ON "APP_CUSTOMER" TO "APP_BATCH";
GRANT SELECT ON "APP_CUSTOMER" TO "APP_BATCH";
GRANT UPDATE ON "APP_CUSTOMER" TO "APP_BATCH";
GRANT SELECT ON "APP_CUSTOMER" TO "APP_READONLY";
GRANT DELETE ON "APP_CUSTOMER" TO "APP_ADMIN";
GRANT INSERT ON "APP_CUSTOMER" TO "APP_ADMIN";
GRANT SELECT ON "APP_CUSTOMER" TO "APP_ADMIN";
GRANT UPDATE ON "APP_CUSTOMER" TO "APP_ADMIN";

-- -------------------------------------------------------------

DROP TABLE "APP_ORDER";

CREATE TABLE "APP_ORDER" (
    "CUSTOMER_ID"   INTEGER,
    "ORDER_ID"      INTEGER,
    "ORDER_DATE"    DATE,
    "TOTAL_AMOUNT"  NUMBER(11,2)
) 
TABLESPACE "APP_DATA";

CREATE UNIQUE INDEX "APP_ORDER_P1" ON
    "APP_ORDER" (
        "CUSTOMER_ID",
        "ORDER_ID"
    )
        TABLESPACE "APP_INDEX";

ALTER TABLE "APP_ORDER"
    ADD CONSTRAINT "APP_ORDER_P1" PRIMARY KEY (
        "CUSTOMER_ID",
        "ORDER_ID"
    )
    USING INDEX "APP_ORDER_P1"
    ENABLE;

COMMENT ON TABLE "APP_ORDER" IS 'Customer orders';

COMMENT ON COLUMN "APP_ORDER"."CUSTOMER_ID" IS 'Reference to the customer';
COMMENT ON COLUMN "APP_ORDER"."ORDER_ID" IS 'Sequential order identifier';
COMMENT ON COLUMN "APP_ORDER"."ORDER_DATE" IS 'Order date';
COMMENT ON COLUMN "APP_ORDER"."TOTAL_AMOUNT" IS 'Total order amount';

GRANT DELETE ON "APP_ORDER" TO "APP_USER";
GRANT INSERT ON "APP_ORDER" TO "APP_USER";
GRANT SELECT ON "APP_ORDER" TO "APP_USER";
GRANT UPDATE ON "APP_ORDER" TO "APP_USER";
GRANT SELECT ON "APP_ORDER" TO "APP_READONLY";

-- -------------------------------------------------------------

DROP TABLE "APP_ORDER_ITEM";

CREATE TABLE "APP_ORDER_ITEM" (
    "CUSTOMER_ID"   INTEGER,
    "ORDER_ID"      INTEGER,
    "LINE_NO"       INTEGER,
    "PRODUCT_CODE"  VARCHAR2(30),
    "QUANTITY"      NUMBER(5)
) 
TABLESPACE "APP_DATA";

CREATE UNIQUE INDEX "APP_ORDER_ITEM_P1" ON
    "APP_ORDER_ITEM" (
        "CUSTOMER_ID",
        "ORDER_ID",
        "LINE_NO"
    )
        TABLESPACE "APP_INDEX";

ALTER TABLE "APP_ORDER_ITEM"
    ADD CONSTRAINT "APP_ORDER_ITEM_P1" PRIMARY KEY (
        "CUSTOMER_ID",
        "ORDER_ID",
        "LINE_NO"
    )
    USING INDEX "APP_ORDER_ITEM_P1"
    ENABLE;

COMMENT ON COLUMN "APP_ORDER_ITEM"."CUSTOMER_ID" IS 'Reference to the customer';
COMMENT ON COLUMN "APP_ORDER_ITEM"."ORDER_ID" IS 'Reference to the order';
COMMENT ON COLUMN "APP_ORDER_ITEM"."LINE_NO" IS 'Line number within the order';
COMMENT ON COLUMN "APP_ORDER_ITEM"."PRODUCT_CODE" IS 'Product code';
COMMENT ON COLUMN "APP_ORDER_ITEM"."QUANTITY" IS 'Ordered quantity';

GRANT DELETE ON "APP_ORDER_ITEM" TO "APP_USER";
GRANT INSERT ON "APP_ORDER_ITEM" TO "APP_USER";
GRANT SELECT ON "APP_ORDER_ITEM" TO "APP_USER";
GRANT UPDATE ON "APP_ORDER_ITEM" TO "APP_USER";
GRANT DELETE ON "APP_ORDER_ITEM" TO "APP_BATCH";
GRANT INSERT ON "APP_ORDER_ITEM" TO "APP_BATCH";
GRANT SELECT ON "APP_ORDER_ITEM" TO "APP_BATCH";
GRANT UPDATE ON "APP_ORDER_ITEM" TO "APP_BATCH";
GRANT SELECT ON "APP_ORDER_ITEM" TO "APP_READONLY";
GRANT DELETE ON "APP_ORDER_ITEM" TO "APP_ADMIN";
GRANT INSERT ON "APP_ORDER_ITEM" TO "APP_ADMIN";
GRANT SELECT ON "APP_ORDER_ITEM" TO "APP_ADMIN";
GRANT UPDATE ON "APP_ORDER_ITEM" TO "APP_ADMIN";
